--- a/style2.css
+++ b/style2.css
@@ -927,8 +927,8 @@ h2.col-sm-12.text-center.tc-white {
     }
 
     .bloc {
-        padding-left: env(safe-area-inset-left);
-        padding-right: env(safe-area-inset-right);
+        padding-left: env(safe-area-inset-left, 20px);
+        padding-right: env(safe-area-inset-right, 20px);
     }
 
     .bloc-group,
@@ -940,8 +940,8 @@ h2.col-sm-12.text-center.tc-white {
     .bloc-fill-screen .fill-bloc-top-edge,
     .bloc-fill-screen .fill-bloc-bottom-edge {
         padding: 0 20px;
-        padding-left: env(safe-area-inset-left);
-        padding-right: env(safe-area-inset-right);
+        padding-left: env(safe-area-inset-left, 20px);
+        padding-right: env(safe-area-inset-right, 20px);
     }
 }
 
